fixed overlapping of cards on the background

--- a/client/src/components/InfoCard/style.css
+++ b/client/src/components/InfoCard/style.css
@@ -6,7 +6,7 @@
     width: 20rem;
     padding: 5px;
     border: none;
-    z-index: 2;
+    z-index: 1;
 }
 
 .card-title {
